fixed spacing navbar

--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,11 @@ body {
   font-size: 1.75em;
   padding-top: 20px;
 }
+.navbar-nav > li {
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
 /* footer */
 footer {
   text-align: center;
